kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-example
  labels:
    app: dev-example
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: dev-example
